--- a/src/componentes/Stories/Stories.css
+++ b/src/componentes/Stories/Stories.css
@@ -16,8 +16,8 @@
         border: 1px solid rgb(217, 217, 217);
         border-radius: 20px;
         height: auto;
-        width: 200px;
+        width: 280px;
         overflow-x: scroll;
-        margin: 20px 0;
+        margin: 20px 0 0 -15px;
     }
 }
