--- a/src/App.css
+++ b/src/App.css
@@ -74,13 +74,15 @@ p, span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60vw;
+    width: 85vw;
+    margin-right: -5px;
   }
 
   .LadoDireito {
-    margin-left: 5px;
-    margin-right: 35px;
-    width: 15vw;
+    display: none;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 0vw;
   }
 }
 
