--- a/src/componentes/Feed/Post/Post.css
+++ b/src/componentes/Feed/Post/Post.css
@@ -18,6 +18,7 @@
     height: 468px;
     max-height: 400px;
     border-radius: 0 0 25px 25px;
+    object-fit: cover;
 }
 
 .BarraSuperior {
@@ -51,13 +52,14 @@
 
     .ConteudoPost {
         background: #cacaca;
-        max-width: 200px;
+        max-width: 400px;
+        margin: 20px 270px 0 0;
     }
 
     .ConteudoPost img {
-        width: 368px;
+        width: auto;
         min-width: 118px;
-        max-width: 200px;
+        max-width: 300px;
         border-radius: 0 0 25px 25px;
         /* object-fit: cover; */
         aspect-ratio: 16 / 9;
@@ -65,5 +67,7 @@
 
     .Post {
         border-radius: 25px;
+        max-width: 300px;
+        margin: 20px 0 0 -15px;
     }
 }
