--- a/src/componentes/LadoDireito/LadoDireito.css
+++ b/src/componentes/LadoDireito/LadoDireito.css
@@ -31,6 +31,11 @@
     border: 1px solid black !important;
 }
 
+/* .LadoDireito .OthersMensager {
+    max-height: 500px;
+    overflow-y: scroll;
+} */
+
 @media screen and (max-width: 600px) {
     .LadoDireito .HeaderOthersM {
         display: flex;
@@ -53,5 +58,9 @@
     .LadoDireito>.SeuMensager>.Mensager>.ImagemIconUsers>img {
         width: 55px;
         height: 55px;
+    }
+
+    .LadoDireito {
+        display: none;
     }
 }
